Chart Clipping Fix
Set the chart labels to splice if label has more then 15 characters.
"thelabelnameexa..."

--- a/teleshow/src/components/DetailModal.css
+++ b/teleshow/src/components/DetailModal.css
@@ -61,7 +61,7 @@
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 18px;
-  max-width: 60vw !important;
+  max-width: 65vw !important;
   width: 90%;
   margin: 2vh auto;
 }
